version/2023.2/_sources/index.rst.txt
=======
PyAnsys
=======

Welcome to the PyAnsys project. While this project originated as a single ``pyansys`` package,
it is now a collection of many Python packages for using Ansys products through Python:

.. toctree::
   :hidden:
   :maxdepth: 3

   getting_started
   user_guide
   api
   examples

.. grid:: 3

    .. grid-item-card:: PyAEDT
      :img-top: _static/thumbnails/pyaedt.png
      :link: https://aedt.docs.pyansys.com/version/0.6
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to AEDT (Ansys Electronic Desktop)

    .. grid-item-card:: PyAnsys Math
      :img-top: _static/thumbnails/pyansys-math.png
      :link: https://math.docs.pyansys.com/version/0.1
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to PyAnsys Math libraries

    .. grid-item-card:: PyDPF - Core
      :img-top: _static/thumbnails/pydpf-core.png
      :link: https://dpf.docs.pyansys.com/version/0.8
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to DPF (Data Processing Framework) for building more advanced and customized workflows

    .. grid-item-card:: PyDPF - Post
      :img-top: _static/thumbnails/pydpf-post.png
      :link: https://post.docs.pyansys.com/version/0.4
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to access and post process Ansys solver result files

    .. grid-item-card:: PyDPF - Composites
      :img-top: _static/thumbnails/pydpf-composites.png
      :link: https://composites.dpf.docs.pyansys.com/version/0.2
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to post-process layered and short-fiber composite models

    .. grid-item-card:: PyDynamicReporting
      :img-top: _static/thumbnails/pydynamicreporting.png
      :link: https://dynamicreporting.docs.pyansys.com/version/0.4
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Dynamic Reporting for service and control of its database and reports

    .. grid-item-card:: PyEnSight
      :img-top: _static/thumbnails/pyensight.png
      :link: https://ensight.docs.pyansys.com/version/0.5
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to EnSight, the Ansys simulation postprocessor

    .. grid-item-card:: PyFluent
      :img-top: _static/thumbnails/pyfluent.png
      :link: https://fluent.docs.pyansys.com/version/0.14
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Fluent

    .. grid-item-card:: PyFluent - Parametric
      :img-top: _static/thumbnails/pyfluent-parametric.png
      :link: https://parametric.fluent.docs.pyansys.com/version/0.7
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Fluent parametric workflows

    .. grid-item-card:: PyFluent - Visualization
      :img-top: _static/thumbnails/pyfluent-visualization.png
      :link: https://visualization.fluent.docs.pyansys.com/version/0.7
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to visualize Ansys Fluent simulations

    .. grid-item-card:: PyMAPDL
      :img-top: _static/thumbnails/pymapdl.png
      :link: https://mapdl.docs.pyansys.com/version/0.64
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys MAPDL (Mechanical APDL)

    .. grid-item-card:: PyMAPDL Reader
      :img-top: _static/thumbnails/pymapdl.png
      :link: https://reader.docs.pyansys.com/version/0.52
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to read legacy MAPDL result files (MAPDL 14.5 and later)

    .. grid-item-card:: PyMechanical
      :img-top: _static/thumbnails/pymechanical.png
      :link: https://mechanical.docs.pyansys.com/version/0.8
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Mechanical

    .. grid-item-card:: PyMotorCAD
      :img-top: _static/thumbnails/pymotorcad.png
      :link: https://motorcad.docs.pyansys.com/version/0.1
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Motor-CAD

    .. grid-item-card:: PyOptislang
      :img-top: _static/thumbnails/pyoptislang.png
      :link: https://optislang.docs.pyansys.com/version/0.2
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Optislang

    .. grid-item-card:: PyPIM
      :img-top: _static/thumbnails/intro.png
      :link: https://pypim.docs.pyansys.com/version/dev/
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to communicate with the Ansys PIM (Product Instance Management) API

    .. grid-item-card:: PyPrimeMesh
      :img-top: _static/thumbnails/pyprimemesh.png
      :link: https://prime.docs.pyansys.com/version/0.4
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Prime Server, which delivers core Ansys meshing technology

    .. grid-item-card:: PySeascape
      :img-top: _static/thumbnails/intro.png
      :link: https://seascape.docs.pyansys.com/version/0.1
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to communicate with Ansys RedHawkSC and TotemSC

    .. grid-item-card:: PySherlock
      :img-top: _static/thumbnails/pysherlock.png
      :link: https://sherlock.docs.pyansys.com/version/0.2
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to communicate with Ansys Sherlock

    .. grid-item-card:: PySystem Coupling
      :img-top: _static/thumbnails/pysystem-coupling.png
      :link: https://systemcoupling.docs.pyansys.com/version/0.1
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to communicate with Ansys System Coupling

    .. grid-item-card:: PyTwin
      :img-top: _static/thumbnails/pytwin.png
      :link: https://twin.docs.pyansys.com/version/0.3
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to communicate with consumption workflows for Ansys digital twins

    .. grid-item-card:: Granta MI BoM Analytics
      :img-top: _static/thumbnails/intro.png
      :link: https://bomanalytics.grantami.docs.pyansys.com/version/1.1
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Granta MI BoM Analytics services

    .. grid-item-card:: Granta MI RecordLists
      :img-top: _static/thumbnails/intro.png
      :link: https://recordlists.grantami.docs.pyansys.com/version/1.0/
      :text-align: center
      :class-title: pyansys-card-title

      Pythonic interface to Ansys Granta MI Lists API

    .. grid-item-card:: Shared Components
      :img-top: _static/thumbnails/intro.png
      :link: https://shared.docs.pyansys.com/
      :text-align: center
      :class-title: pyansys-card-title

      Shared Ansys software components to enable package interoperability and minimize maintenance
